--- a/owms.html
+++ b/owms.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+  <script>
+    window.location.href = "https://owms.kesug.com/";
+  </script>
 </head>
 <body>
   <p>Hello</p>
 </body>
 </html>
+
